<resources>
    <string name="app_name">Sakha</string>
    <string name="email_userId_hint">Enter Email or Phone</string>
    <string name="password">Enter Password</string>
    <string name="forget_pwd">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">New Registration</string>
    <string name="logo_description">App Logo</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email Address</string>
    <string name="phone_num_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="confirm_pwd_hint">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="error_message">Error message will appear here</string>
    <string name="already_account">Already have an account? Click Here to Login</string>
    <string name="select_state_hint">State</string>
    <string name="select_District_hint">District</string>
    <string name="select_Village_hint">Village</string>
    <string name="land_area_hint">Total Land Area</string>
    <string name="select_Irrigation_method_hint">Irrigation Method</string>
    <string name="irrigation_hint">Irrigation Method</string>
    <string name="organic_hint">Organic</string>
    <string name="chemical_hint">Chemical</string>
    <string name="both_hint">Both</string>
    <string name="fertilizers_hint">Fertilizers Used</string>
    <string name="submit_btn">Submit</string>
    <string name="ham_menu">hamburger menu</string>
    <string name="fertilizer">Fertilizers</string>
    <string name="crop">My Crops</string>
    <string name="irrigation">Irrigation</string>
    <string name="Market">Market Price</string>
    <string name="weather">Weather</string>
    <string name="gov_schemes">Government\nSchemes</string>
    <string name="ideas">Ideas and Schemes</string>
    <string name="basket">Fertilizers</string>
    <string name="market_place">Market Place</string>
    <string name="fruitandvegetables">Fruits &amp; Vegetables</string>
    <string name="crops">Crops</string>
    <string name="livestock">Livestock</string>
    <string name="agriculture">Agriculture</string>
    <string name="scheme1">Pradhan Mantri Kisan MaanDhan Yojana (PM-KMY)</string>
    <string name="scheme2">Agriculture Infrastructure Fund (AIF)</string>
    <string name="scheme3">Soil Health Card (SHC)</string>
    <string name="scheme4">Pradhan Mantri Kisan Samman Nidhi</string>
    <string name="scheme5">PM Kisan</string>
    <string name="scheme6">PM Fasal Bima Yojana</string>
    <string name="farming_tips">Farming Tips</string>
    <string name="soil_prep">Soil Preparation</string>
    <string name="irrigation_tab">Irrigation</string>
    <string name="crop_rotation">Crop Rotation</string>
    <string name="pest_management">Pest Management</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="nextday1">Overmorrow</string>
    <string name="nextday2">Day after tomorrow</string>
    <string name="nocroptxt"><![CDATA[No crop details available. Click <b>Add Crops</b> button below]]></string>
    <string name="addCropsbtn">Add Crops</string>
    <string name="entercropname">Enter Crop Name</string>
    <string name="plantingDate">Planted on</string>
    <string name="cropType">Enter Crop Type</string>
    <string name="addcropBTN">Add Crop Details</string>
    <string name="irrigationMethods">Irrigation Methods</string>
    <string name="pesticides">Pesticides</string>
    <string name="machinery">Machinery</string>
    <string name="productionCost">Enter Total Production Cost (₹)</string>
    <string name="sellingRev">Enter Total Selling Revenue (₹)</string>
    <string name="pl">Calculate Profit / Loss</string>
    <string name="feedback">Feedback</string>


</resources>
