<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center">

    <EditText
        android:id="@+id/userFname"
        android:layout_width="match_parent"
        android:ems="10"
        style="@style/edit_text_presets"
        android:layout_marginTop= "50dp"
        android:hint="@string/full_name_hint"
        android:autofillHints="Full Name"
        android:drawableStart="@drawable/person_ic"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:inputType="text" />

    <EditText
        android:id="@+id/usermail"
        style="@style/edit_text_presets"
        android:layout_marginTop= "0dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="Email Address"

        android:drawableStart="@drawable/user_mail"/>

    <EditText
        android:id="@+id/usernum"
        style="@style/edit_text_presets"
        android:layout_marginTop= "0dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/phone_num_hint"
        android:inputType="phone"
        android:maxLength="10"
        android:autofillHints="Mobile Number"
        android:drawableStart="@drawable/phone_num"/>

    <EditText
        android:id="@+id/userPwd"
        style="@style/edit_text_presets"
        android:layout_marginTop= "0dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="Password"
        android:drawableStart="@drawable/lock_ic"/>

    <EditText
        android:id="@+id/confuser_Pwd"
        style="@style/edit_text_presets"
        android:layout_marginTop= "0dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/confirm_pwd_hint"
        android:inputType="textPassword"
        android:autofillHints="Password"
        android:drawableStart="@drawable/lock_ic"/>


    <TextView
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:text="@string/error_message" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/register_btn"
        style="@style/button_view_presets" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:textColor="@color/blue"
        android:text="@string/already_account"
        android:layout_marginTop="35dp"
        android:textSize="16sp"
        android:background="@color/transparentBg"/>

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/no_bg_sakha_logo"
        style="@style/No_bg_logo_presets"
        android:layout_marginTop="30dp"/>


</LinearLayout>