<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/market_bg"
    android:gravity="center"
    android:id="@+id/market">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/gov_schemes"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="@color/gray"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:contentDescription="@string/gov_schemes"
        android:src="@drawable/govschemespfp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheme1"
        android:text="@string/scheme1"
        app:icon="@drawable/gov_icon4"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_width="325dp"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheme2"
        android:text="@string/scheme2"
        app:icon="@drawable/gov_icon5"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_width="325dp"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheme3"
        android:text="@string/scheme3"
        app:icon="@drawable/soil_prep_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_width="325dp"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheme4"
        android:text="@string/scheme4"
        app:icon="@drawable/gov_icon1"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_width="325dp"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheme5"
        android:text="@string/scheme5"
        app:icon="@drawable/gov_icon3"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_width="325dp"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheme6"
        android:text="@string/scheme6"
        app:icon="@drawable/gov_icon2"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_width="325dp"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>



</LinearLayout>