<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/weatherBg"
    android:gravity="center"
    android:id="@+id/market">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/weather"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/gray"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:contentDescription="@string/weather"
        android:src="@drawable/weatherpfp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/today"
        android:text="@string/today"
        app:icon="@drawable/apple_icon"
        app:iconGravity="end"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tomorrow"
        android:text="@string/tomorrow"
        app:icon="@drawable/crops_icon"
        app:iconGravity="end"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/day1"
        android:text="@string/nextday1"
        app:icon="@drawable/livestock_icon"
        app:iconGravity="end"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/agriculture"
        android:text="@string/nextday2"
        app:icon="@drawable/agriculture_icon"
        app:iconGravity="end"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

</LinearLayout>