<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/market_bg"
    android:gravity="center"
    android:id="@+id/market">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/market_place"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/gray"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:contentDescription="@string/market_place"
        android:src="@drawable/market_pfp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fruits_and_vegetables"
        android:text="@string/fruitandvegetables"
        app:icon="@drawable/apple_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/crops"
        android:text="@string/crops"
        app:icon="@drawable/crops_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/livestock"
        android:text="@string/livestock"
        app:icon="@drawable/livestock_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/agriculture"
        android:text="@string/agriculture"
        app:icon="@drawable/agriculture_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

</LinearLayout>