<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/market_bg"
    android:gravity="center"
    android:id="@+id/farmingtips">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/farming_tips"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/gray"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:contentDescription="@string/farming_tips"
        android:src="@drawable/farmingtipspfp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/soilPrepBTN"
        android:text="@string/soil_prep"
        app:icon="@drawable/soil_prep_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/irrigationBTN"
        android:text="@string/irrigation_tab"
        app:icon="@drawable/irrigation_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cropRotationBTN"
        android:text="@string/crop_rotation"
        app:icon="@drawable/crop_rotation_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pestManagementBTN"
        android:text="@string/pest_management"
        app:icon="@drawable/pest_management_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        style="@style/market_stylePresets"
        app:strokeWidth="0dp"/>

</LinearLayout>