<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/radiant_bg"
    android:gravity="center"
    android:id="@+id/addCropDetails">

    <EditText
        android:id="@+id/cropname"
        android:autofillHints="Crop Name"
        android:text="@string/entercropname"
        android:layout_width="match_parent"
        style="@style/edit_text_presets"
        android:layout_marginBottom="0dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/cropType_dropdown_layout"
        style="@style/txt_input_layer"
        app:hintTextColor="@color/text_view_textColorHint"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundMode="none"
        app:hintTextAppearance="@style/CustomHintText"
        android:hint="@string/cropType">

        <AutoCompleteTextView
            android:id="@+id/cropTypeDropdown"
            style="@style/autocomplete_txt_view"
            android:hint="@string/cropType"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        style="@style/edit_text_presets"
        android:hint="@string/plantingDate"
        android:focusable="false"
        android:inputType="date"
        android:textColorHint="@color/text_view_textColorHint"
        android:drawableStart="@drawable/ic_calendar"/>


    <Spinner
        android:id="@+id/cropStatusDropdown"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/txt_input_layer"
        android:textAlignment="center" />

</LinearLayout>