<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/radiant_bg"
    android:gravity="center"
    android:padding="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Expense Tracker"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/darkGreen_text"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/etCost"
        android:layout_width="match_parent"
        style="@style/edit_text_presets"
        android:autofillHints="production cost"
        android:hint="@string/productionCost"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etRevenue"
        android:layout_width="match_parent"
        style="@style/edit_text_presets"
        android:autofillHints="Selling Revenue"
        android:hint="@string/sellingRev"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        style="@style/button_view_presets"
        android:text="@string/pl"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:backgroundTint="@color/darkGreen_text"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginVertical="25dp"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result will appear here"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/gray"/>
</LinearLayout>
